<!-- ChaosCore build file -->
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <packaging>jar</packaging>
    <groupId>me.RockinChaos.core</groupId>
    <artifactId>ChaosCore</artifactId>
    <name>ChaosCore</name>
    <description>A shaded core utility.</description>
    <url>https://github.com/RockinChaos/ChaosCore/</url>

    <version>1.0.4-SNAPSHOT</version>

    <properties>
        <spigot.version>1.20.4-R0.1-SNAPSHOT</spigot.version>

        <papi.version>2.10.9</papi.version>
        <authlib.version>1.5.21</authlib.version>
        <worldguard.version>7.0.4-SNAPSHOT</worldguard.version>
        <citizens.version>2.0.27-SNAPSHOT</citizens.version>
        <protocol.version>4.6.0</protocol.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <github.global.server>github</github.global.server>
    </properties>

    <build>
        <sourceDirectory>${project.basedir}</sourceDirectory>

        <resources>

            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>.</directory>
                <includes>
                    <include>LICENSE</include>
                </includes>
            </resource>

        </resources>

        <plugins>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <encoding>Cp1252</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.1</version>
                <configuration>
                    <finalName>ChaosCore-${project.version}-b${CI_PIPELINE_IID}</finalName>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                        <exclude>META-INF/*.INF</exclude>
                                        <exclude>META-INF/*.MF</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>

    </build>

    <repositories>
        <!--Spigot Repository-->
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <!--PlaceholderAPI Repository-->
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <!--Mojang Repository-->
        <repository>
            <id>mojang</id>
            <url>https://libraries.minecraft.net/</url>
        </repository>
        <!--WorldGuard/WorldEdit Repository-->
        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <!--Vault Repository-->
        <repository>
            <id>VaultAPI</id>
            <url>https://ci.ender.zone/plugin/repository/everything/net/milkbowl/vault/</url>
        </repository>
        <!--Citizens Repository-->
        <repository>
            <id>citizens-repo</id>
            <url>https://maven.citizensnpcs.co/repo</url>
        </repository>
        <!--ProtocolLib Repository-->
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>
        <!--NickAPI Repository-->
        <repository>
            <id>Intelligence Repository-haoshoku</id>
            <name>Intelligence Repository</name>
            <url>https://mvn.intelligence-modding.de/haoshoku</url>
        </repository>
        <!--bStats Repository-->
        <repository>
            <id>CodeMC</id>
            <url>https://repo.codemc.org/repository/maven-public</url>
        </repository>
    </repositories>

    <dependencies>
        <!--Spigot API-->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>${spigot.version}</version>
            <scope>provided</scope>
        </dependency>
        <!--PlaceholderAPI API-->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>${papi.version}</version>
            <scope>provided</scope>
        </dependency>
        <!--Vault API-->
        <dependency>
            <groupId>net.milkbowl.vault</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>
        <!--Citizens API-->
        <dependency>
            <groupId>net.citizensnpcs</groupId>
            <artifactId>citizens-main</artifactId>
            <version>${citizens.version}</version>
            <scope>provided</scope>
        </dependency>
        <!--ProtocolLib API-->
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>${protocol.version}</version>
            <scope>provided</scope>
        </dependency>
        <!--Nick API-->
        <dependency>
            <groupId>xyz.haoshoku.nick</groupId>
            <artifactId>NickAPI</artifactId>
            <version>v6.5.3</version>
            <scope>provided</scope>
        </dependency>
        <!--WorldGuard API-->
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>${worldguard.version}</version>
            <scope>provided</scope>
        </dependency>
        <!--Mojang AuthLib API-->
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>authlib</artifactId>
            <version>${authlib.version}</version>
            <scope>provided</scope>
        </dependency>
        <!--bStats API-->
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>1.4</version>
            <scope>provided</scope>
        </dependency>
        <!--Apache API-->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.17.1</version>
            <scope>provided</scope>
        </dependency>
        <!--Netty API-->
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>4.1.65.Final</version>
            <scope>provided</scope>
        </dependency>
        <!--Maven WorldUtils API-->
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.6</version>
            <scope>provided</scope>
        </dependency>
        <!--Google API-->
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>30.1.1-jre</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.9</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <organization>
        <name>ChaosCore</name>
        <url>https://github.com/RockinChaos/ChaosCore</url>
    </organization>

    <issueManagement>
        <url>https://github.com/RockinChaos/ChaosCore/issues</url>
        <system>Github</system>
    </issueManagement>

    <ciManagement>
        <system>GitLab</system>
        <url>https://labs.craftationgaming.com/ChaosCore/</url>
    </ciManagement>

    <distributionManagement>
        <repository>
            <id>gitlab-maven</id>
            <url>${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/maven</url>
        </repository>
        <snapshotRepository>
            <id>gitlab-maven</id>
            <url>${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/maven</url>
        </snapshotRepository>
    </distributionManagement>
</project>